# viam-unitree

./: CMakeLists.txt  Makefile  README.md  arm_sdk.go  conanfile.py  erh_viam-unitree_g1-arm.md  erh_viam-unitree_g1-base.md  erh_viam-unitree_g1-camera.md  g1.go  g1_base.go  g1_camera.go  g1_left_arm_model.json  g1_lidar.go  g1_right_arm_model.json  g1arm.go  go.mod  go.sum  main.cpp  main.go  meta.json  unitree.go
.github/workflows/: deploy.yml
capi/: dds_unitree.c  dds_unitree.h  unitree_capi.cpp  unitree_capi.h
src/: g1_base.cpp  g1_base.hpp  g1_camera.cpp  g1_camera.hpp
